     ITPB.function AsText: AnsiString; {Returns TPB as a text string}

   ITransaction
     function GetDefaultCompletion: TTransactionCompletion;
     function GetJournalingActive(attachment: IAttachment): boolean; {attachment must be specified when multi-database transaction}

4. New IAttachment helper functions
     function HasTable(aTableName: AnsiString): boolean;
     function GetAttachmentID: integer;
     function GetCharSetID: integer;

5. IStatement: if the BatchRowLimit is set to maxint, the maximum possible buffer size
   will be allocted for batch operations.

6. IStatement, IColumnMetaData and ISQLParam all now consistently provide:
    function GetStatement: IStatement;
    function GetTransaction: ITransaction;
    function GetAttachment: IAttachment;

7. Internal: a more disciplined approach to the handling of Firebird.IReferenceCounted
   interfaces.


FBINTF Change Log  version          (1.3-3 Build 12935) Mon, 06 Dec 2021 23:17:13 +0000

1. Fix compile error with fpc trunk (3.3.1 and later), due to type change to tzname in "unix" unit.

2. Remove constraint in IAttachment.HasScollableCursors that returned false when
   using remote protocol. Scrollable cursors with remote database expected to
   be support for Firebird 4.0.1 onwards. Note: Firebird 4.0.0 will return
   a not supported error.

3. IStatement: new function;
    TStatementFlag = (stHasCursor,stRepeatExecute,stScrollable);
    TStatementFlags = set of TStatementFlag;
    function GetFlags: TStatementFlags;

4. Revised behaviour for IStatement.ExecuteQuery in order to preserve backwards
   compatibility.
   In Firebird 5, Update..Returning may returns multiple rows and hence the statemen
   type changes from ExecProcedure to Select. So that ExecuteQuery can continue
   to be used with Update...Retruning statements that return a singleton row,
   instead of raising an exception when ExecuteQuery is used with a (SELECT) statement,