@@ -249,6 +249,7 @@ type
     function HasBatchMode: boolean; virtual;
     function HasTable(aTableName: AnsiString): boolean;
     function HasFunction(aFunctionName: AnsiString): boolean;
+    function HasProcedure(aProcName: AnsiString): boolean;
 
   public
     {Character Sets}
@@ -1351,6 +1352,13 @@ begin
   Result := OpenCursorAtStart(
        'Select count(*) From RDB$FUNCTIONS Where RDB$FUNCTION_NAME = ?',
           [aFunctionName])[0].AsInteger > 0;
+end;
+
+function TFBAttachment.HasProcedure(aProcName: AnsiString): boolean;
+begin
+  Result := OpenCursorAtStart(
+       'Select count(*) From RDB$PROCEDURES Where RDB$PROCEDURE_NAME = ?',
+          [aProcName])[0].AsInteger > 0;
 end;
 
 function TFBAttachment.HasDefaultCharSet: boolean;
