@@ -15,47 +15,42 @@
       <Unit1>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="138"/>
         <CursorPos X="6" Y="170"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test3.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="100"/>
         <CursorPos Y="100"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="Test4.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="31"/>
         <CursorPos X="56" Y="37"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test5.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="77"/>
         <CursorPos Y="90"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test6.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="192"/>
         <CursorPos X="41" Y="136"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test7.pas"/>
@@ -160,11 +155,10 @@
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1554"/>
         <CursorPos X="46" Y="1567"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="FBTestApp.pas"/>
@@ -177,20 +171,18 @@
       <Unit21>
         <Filename Value="Test2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="175"/>
         <CursorPos Y="193"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="Test19.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="379"/>
         <CursorPos X="78" Y="396"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit22>
       <Unit23>
         <Filename Value="Test20.pas"/>
@@ -225,40 +217,37 @@
       </Unit26>
       <Unit27>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="394"/>
         <CursorPos Y="408"/>
         <UsageCount Value="72"/>
-        <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="../IBUtils.pas"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="973"/>
         <CursorPos X="79" Y="988"/>
         <UsageCount Value="33"/>
-        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="812"/>
         <CursorPos X="45" Y="827"/>
         <UsageCount Value="16"/>
-        <Loaded Value="True"/>
       </Unit29>
       <Unit30>
         <Filename Value="../client/FBMessages.pas"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="375"/>
         <CursorPos Y="396"/>
         <UsageCount Value="27"/>
-        <Loaded Value="True"/>
       </Unit30>
       <Unit31>
         <Filename Value="../IB.pas"/>
-        <TopLine Value="1149"/>
-        <CursorPos X="40" Y="1161"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="245"/>
+        <CursorPos X="29" Y="260"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -308,11 +297,10 @@
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1297"/>
         <CursorPos Y="1313"/>
         <UsageCount Value="40"/>
-        <Loaded Value="True"/>
       </Unit37>
       <Unit38>
         <Filename Value="../client/FBStatement.pas"/>
@@ -378,12 +366,10 @@
       </Unit45>
       <Unit46>
         <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="146"/>
         <CursorPos X="35" Y="168"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit46>
       <Unit47>
         <Filename Value="../client/2.5/FB25Attachment.pas"/>
@@ -450,17 +436,16 @@
       </Unit55>
       <Unit56>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="2"/>
-        <TopLine Value="1892"/>
-        <CursorPos Y="1906"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1823"/>
+        <CursorPos X="13" Y="1844"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="1823"/>
-          <CursorPos X="13" Y="1844"/>
+          <TopLine Value="1892"/>
+          <CursorPos Y="1906"/>
         </ExtraEditor1>
         <UsageCount Value="98"/>
-        <Loaded Value="True"/>
       </Unit56>
       <Unit57>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
@@ -491,26 +476,24 @@
       </Unit60>
       <Unit61>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="34"/>
         <CursorPos X="14" Y="58"/>
         <UsageCount Value="32"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit61>
       <Unit62>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="3664"/>
-        <CursorPos Y="3685"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="2439"/>
+        <CursorPos X="9" Y="2449"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="2439"/>
-          <CursorPos X="9" Y="2449"/>
+          <TopLine Value="3664"/>
+          <CursorPos Y="3685"/>
         </ExtraEditor1>
         <UsageCount Value="92"/>
-        <Loaded Value="True"/>
       </Unit62>
       <Unit63>
         <Filename Value="../../fbintf.fb4/changelog"/>
@@ -733,11 +716,10 @@
       </Unit93>
       <Unit94>
         <Filename Value="../../../../../fpcsrc/3.2.2/rtl/inc/generic.inc"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="817"/>
         <CursorPos Y="837"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit94>
       <Unit95>
         <Filename Value="../../../../../fpcsrc/3.2.2/rtl/objpas/sysutils/sysstr.inc"/>
@@ -980,128 +962,12 @@
         <UsageCount Value="10"/>
       </Unit126>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
-      <Position1>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="342" TopLine="328"/>
-      </Position1>
-      <Position2>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="177" TopLine="164"/>
-      </Position2>
-      <Position3>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="178" TopLine="164"/>
-      </Position3>
-      <Position4>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="179" TopLine="164"/>
-      </Position4>
-      <Position5>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="180" TopLine="164"/>
-      </Position5>
-      <Position6>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="183" TopLine="164"/>
-      </Position6>
-      <Position7>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="184" TopLine="164"/>
-      </Position7>
-      <Position8>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="189" TopLine="167"/>
-      </Position8>
-      <Position9>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="190" TopLine="168"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="191" TopLine="169"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="192" TopLine="170"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="193" TopLine="171"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="194" TopLine="172"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="199" TopLine="186"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="338" Column="43" TopLine="328"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="68" Column="15" TopLine="66"/>
-      </Position16>
-      <Position17>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="288" Column="30" TopLine="283"/>
-      </Position17>
-      <Position18>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="55" Column="16" TopLine="53"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="189" Column="3" TopLine="185"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="54" Column="15" TopLine="42"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="181" TopLine="175"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="289" Column="28" TopLine="276"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="181" TopLine="168"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="184" TopLine="168"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="181" TopLine="168"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="178" TopLine="168"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="69" Column="77" TopLine="47"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <Caret Line="166" Column="35" TopLine="144"/>
-      </Position29>
-    </JumpHistory>
+    <JumpHistory HistoryIndex="-1"/>
     <RunParams>
       <FormatVersion Value="2"/>
       <Modes ActiveMode="default"/>
     </RunParams>
-    <HistoryLists Count="3">
+    <HistoryLists Count="2">
       <List0 Name="LaunchingApplication" Type="File" Count="1">
         <Item1 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </List0>
