@@ -43,6 +43,8 @@ FBINTF Change Log  version          (1.4-0 Build 12952) Tue, 07 Dec 2021 11:53:4
 
 4. New IAttachment helper functions
      function HasTable(aTableName: AnsiString): boolean;
+     function HasFunction(aFunctionName: AnsiString): boolean;
+     function HasProcedure(aProcName: AnsiString): boolean;
      function GetAttachmentID: integer;
      function GetCharSetID: integer;
 
